# farrago

./: CMakeLists.txt  README.md
example/: create_object.cpp  create_singleton.cpp
include/: farrago.h  obj_creator.h  singleton_manager.h  type_list.h
